# sign-gpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
sign_gpt/: train_lora.py
sign_gpt/custom_datasets/: dataset_utils.py  dgs_corpus.py  dgs_types.py  dicta_sign.py  rwth_phoenix2014_t.py  signbank_plus.py  signwriting_hamnosys.py
sign_gpt/datasets/: dgs_types.py  dicta_sign.py  rwth_phoenix2014_t.py  signbank_plus.py
sign_gpt/language_utils/: README.md  i18n.py  info.py
sign_gpt/language_utils/i18n/: countries.json  languages.json  signed_languages.json
sign_gpt/models/: data.py
sign_gpt/models/huggingface/: train.sh  train_lora.py
sign_gpt/models/keras/: README.md  train_gemma.py
sign_gpt/models/vertex/: gemini.py
