[project]
name = "sign-gpt"
description = "GPT model for Sign Language"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "datasets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    # To pre-generate the datasets
    "tensorflow-datasets",
    "sign_language_datasets @ git+https://github.com/sign-language-processing/datasets",
    "signwriting @ git+https://github.com/sign-language-processing/signwriting"
]
keras = [
    "keras-nlp",
    "keras>=3",
    "wandb"
]
huggingface = [
    "torch",
    "peft",
    "transformers",
    "wandb"
]
vertex = [
    "gcsfs",
    "vertexai"
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long
    "R0801", # Similar lines in 2 files
]

[tool.setuptools]
packages = [
    "sign_gpt"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["sign_gpt"]
